Stylesheet/emote/tag updates 2013-09-16

--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -519,10 +519,18 @@ a[href|="/raritybj"] {
     height: 125px;
     background-image: url(%%2AmIcRd%%)}
 
+a[href|="/usecrisco"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 170px;
+    height: 140px;
+    background-image: url(%%use-crisco%%)}
+
 a[href|="/stamponthebulb"] {
     display: block;
     clear: none;
     float: left;
     width: 118px;
-    height: 139px;
-    background-image: url(%%redtoxin2%%)
+    height: 140px;
+    background-image: url(%%redtoxin2%%)}
