--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -1018,10 +1018,121 @@ a[href|="/gimmeback"] {
  clear: none;
  float: left; 
  width: 220px;
- height: 110px;
+ height: 168px;
  background-image: url(%%spritesheet6%%);
- background-position: -0px -100px;
+ background-position: -0px -0px;
 } 
+
+a[href|="/sadhoofbump"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 279px;
+ height: 139px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -168px;
+} 
+
+a[href|="/princessmac"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 204px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -307px;
+} 
+
+a[href|="/macingrab"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 194px;
+ height: 199px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -511px;
+} 
+
+a[href|="/carrymac"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 198px;
+ height: 195px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -710px;
+} 
+
+a[href|="/abwhee"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 160px;
+ height: 207px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -905px;
+} 
+
+a[href|="/macinwat"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 116px;
+ height: 229px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -1112px;
+} 
+
+a[href|="/macinhop"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 126px;
+ height: 247px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -1341px;
+} 
+
+a[href|="/abhuggy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 185px;
+ height: 208px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -1588px;
+} 
+
+a[href|="/abexcitedgrin"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 198px;
+ height: 200px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -1796px;
+} 
+
+a[href|="/helibloom"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 187px;
+ height: 217px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -1994px;
+} 
+
+a[href|="/applebummed"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 220px;
+ height: 140px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -2211px;
+} 
+
 div.titlebox span.word {display:none; }
 div.titlebox span.number:after {content:" Sexy Beasts";}
 
