--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -685,7 +685,7 @@ margin-right: 320px;
 body {
    background-image: url(%%background%%);
    background-repeat: no-repeat;
-   background-position: right bottom;
+   background-position: center center;
    background-attachment:fixed;
    margin-top: 5px;
    }
