--- a/source-css/mylittlealcoholic.css
+++ b/source-css/mylittlealcoholic.css
@@ -3,7 +3,7 @@
 }
 
 .titlebox .subscribers span.number:after{
-    content: " Hoofers"
+    content: " Quarter-asses"
 }
 
 .titlebox .users-online span.number:after{
