--- a/source-css/mylittlekitchen.css
+++ b/source-css/mylittlekitchen.css
@@ -54,7 +54,9 @@ a[href="/hotsauce"] {
     height: 150px;
     background-image: url(%%hotsauce%%);
 }
-
+/*
 #header-img {
-    background-image: url(%%header-img%%);
+    background-image: url(%%header-img%%) !important;
+    height:247px !important;
+    width:200px !important;
 }
