--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -12,7 +12,7 @@ div.titlebox span.word {
     font-size:10px;
     }
 div.titlebox .subscribers span.number:after {
-    color:black;
+    color:pink;
     font-family:"Ariel";
     font-size:20px;
 
@@ -23,11 +23,11 @@ div.titlebox .users-online span.number:after {
     }
 /*body
 {
-background-color:#ffb9de;
+background-color:#c10058;
 }*/
 h1
 {
-background-color:#ffb9de;
+background-color:#c10058;
 text-align:center;
 font-size:18px;
 }
@@ -35,7 +35,7 @@ p
 {
 font-family:"Ariel";
 font-size:15px;
-color:black;
+color:deeppink;
 }
 #sr-header-area
 {
