--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -214,7 +214,8 @@ h1.redditname:before
 }*/
 
 a[href|="/aliloo"] {
-  background-image: url(%%aliloo%%);
+  background-image: url(%%sprite1%%);
+  background-position: 0 -397px;
   display:block;
   clear:none;
   float:left;
@@ -250,7 +251,8 @@ a[href|="/gabepony"] {
 }
 
 a[href|="/applecorn"] {
-  background-image: url(%%applecorn%%);
+  background-image: url(%%sprite1%%);
+  background-position: 0 -597px;
   display:block;
   clear:none;
   float:left;
@@ -297,12 +299,13 @@ a[href|="/pwetty"] {
 
 
 a[href|="/alicorneyes"] {
-  background-image: url(%%alicorneyes%%);
+  background-image: url(%%sprite1%%);
+  background-position: 0 -171px;
   display:block;
   clear:none;
   float:left;
   width:150px;
-  height:170px;
+  height:176px;
 }
 
 a[href|="/sockchaser"] {
@@ -315,16 +318,18 @@ a[href|="/sockchaser"] {
 }
 
 a[href|="/bigappleicorn"] {
-  background-image: url(%%Bigappleicorn%%);
+  background-image: url(%%sprite1%%);
+  background-position: 0 0;
   display:block;
   clear:none;
   float:left;
-  width:135px;
-  height:125px;
+  width:150px;
+  height:121px;
 }
 
 a[href|="/chibicorn"] {
-  background-image: url(%%chibicorn%%);
+  background-image: url(%%sprite1%%);
+  background-position: 0 -1009px;
   display:block;
   clear:none;
   float:left;
@@ -333,7 +338,8 @@ a[href|="/chibicorn"] {
 }
 
 a[href|="/crystalchaser"] {
-  background-image: url(%%crystalchaser%%);
+  background-image: url(%%sprite1%%);
+  background-position: 0 -1476px;
   display:block;
   clear:none;
   float:left;
@@ -342,7 +348,8 @@ a[href|="/crystalchaser"] {
 }
 
 a[href|="/cutetwi"] {
-  background-image: url(%%cutetwi%%);
+  background-image: url(%%sprite1%%);
+  background-position: 0 -1676px;
   display:block;
   clear:none;
   float:left;
@@ -351,7 +358,8 @@ a[href|="/cutetwi"] {
 }
 
 a[href|="/ducklestia"] {
-  background-image: url(%%ducklestia%%);
+  background-image: url(%%sprite1%%);
+  background-position: -244px -208px;
   display:block;
   clear:none;
   float:left;
@@ -496,7 +504,8 @@ a[href|="/scaredtavi"] {
 }
 
 a[href|="/djhug"] {
-  background-image: url(%%djhug%%);
+  background-image: url(%%sprite1%%);
+  background-position: -244px 0;
   display:block;
   clear:none;
   float:left;
@@ -505,7 +514,8 @@ a[href|="/djhug"] {
 }
 
 a[href|="/djcuddles"] {
-  background-image: url(%%djcuddles%%);
+  background-image: url(%%sprite1%%);
+  background-position: 0 -1876px;
   display:block;
   clear:none;
   float:left;
@@ -514,7 +524,8 @@ a[href|="/djcuddles"] {
 }
 
 a[href|="/vinylcozy"] {
-  background-image: url(%%cozyvinyl2%%);
+  background-image: url(%%sprite1%%);
+  background-position:0 -1234px;
   display:block;
   clear:none;
   float:left;
@@ -559,7 +570,8 @@ a[href|="/whoovesonwhooves"] {
 }
 
 a[href|="/cutevinyl"] {
-  background-image: url(%%fillyvinyl%%);
+  background-image: url(%%sprite1%%);
+  background-position: -244px -434px;
   display:block;
   clear:none;
   float:left;
@@ -577,7 +589,8 @@ a[href|="/shibe"] {
 }
 
 a[href|="/awakedash"] {
-  background-image: url(%%awakedash%%);
+  background-image: url(%%sprite1%%);
+  background-position: 0 -759px;
   display:block;
   clear:none;
   float:left;
