--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -593,6 +593,78 @@ a[href|="/spoonderland"] {
  background-image: url(%%spoonderland%%);
 } 
 
+a[href|="/floatavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 72px;
+ height: 200px;
+ background-image: url(%%floatavia%%);
+} 
+
+a[href|="/floatywubs"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 83px;
+ height: 200px;
+ background-image: url(%%floatywubs%%);
+} 
+
+a[href|="/lyracuteblanket"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 300px;
+ height: 100px;
+ background-image: url(%%lyracuteblanket%%);
+} 
+
+a[href|="/sicktavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 258px;
+ height: 100px;
+ background-image: url(%%sicktavi%%);
+} 
+
+a[href|="/tavimasterpiece"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 184px;
+ height: 150px;
+ background-image: url(%%tavimasterpeice%%);
+} 
+
+a[href|="/chibitavicello"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 140px;
+ height: 150px;
+ background-image: url(%%chibitavicello%%);
+} 
+
+a[href|="/octascratchhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 219px;
+ height: 150px;
+ background-image: url(%%octascratchhug%%);
+} 
+
+a[href|="/tavivinylbathtime"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 282px;
+ height: 150px;
+ background-image: url(%%tavivinylbathtime%%);
+} 
+
 a[href|="/applejackvilla"] {  
  display: block;
  clear: none;
@@ -813,4 +885,94 @@ a[href|="/zecorastzebrasburg"] {
  height: 150px;
  background-image: url(%%Spritesheet-2%%);
  background-position: -0px -1500px;
+} 
+
+a[href|="/rainbowtavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 154px;
+ height: 150px;
+ background-image: url(%%taviclones%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/princesstavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 154px;
+ height: 150px;
+ background-image: url(%%taviclones%%);
+ background-position: -0px -150px;  
+} 
+
+a[href|="/tavihooves"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 154px;
+ height: 150px;
+ background-image: url(%%taviclones%%);
+ background-position: -0px -300px;  
+} 
+
+a[href|="/tavijack"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 154px;
+ height: 150px;
+ background-image: url(%%taviclones%%);
+ background-position: -0px -450px;  
+} 
+
+a[href|="/tavilee"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 154px;
+ height: 150px;
+ background-image: url(%%taviclones%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/tavipie"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 154px;
+ height: 150px;
+ background-image: url(%%taviclones%%);
+ background-position: -0px -750px;  
+} 
+
+a[href|="/tavisparkle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 154px;
+ height: 150px;
+ background-image: url(%%taviclones%%);
+ background-position: -0px -900px;  
+} 
+
+a[href|="/tavity"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 154px;
+ height: 150px;
+ background-image: url(%%taviclones%%);
+ background-position: -0px -1050px;  
+} 
+
+a[href|="/taviscratch"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 154px;
+ height: 150px;
+ background-image: url(%%taviclones%%);
+ background-position: -0px -1200px;  
 } 
